--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -3,9 +3,18 @@
 <div class="f-info">
 
     <div class="f-info-social">
-        <i class="fa-brands fa-square-facebook"></i>
-        <i class="fa-brands fa-square-instagram"></i>
-        <i class="fa-brands fa-linkedin"></i>
+         <a href="mailto:your@email.com" class="text-dark">
+      <i class="fa-brands fa-square-facebook"></i>
+    </a>
+     <a href="mailto:your@email.com" class="text-dark">
+      <i class="fa-brands fa-square-instagram"></i>
+    </a>
+      <a href="https://www.linkedin.com/in/mohd-adil-2005c " class="text-dark">
+
+    <i class="fa-brands fa-linkedin"></i>
+    </a>
+        
+        
 
 
 
